Use of carat operator in package.json dependencies requires Node.js 0.10+

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/lovell/media-type"
   },
   "engines": {
-    "node": "*"
+    "node": ">=0.10"
   },
   "scripts": {
     "test": "node test/unit"
