--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "media-type",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./lib/mediaType",
   "description": "Parse and validate RFC6838 media types, anything from 'text/plain' to 'application/vnd.company.app.entity-v2+xml;charset=utf8'",
   "repository": {
@@ -25,8 +25,5 @@
     "vendor"
   ],
   "author": "Lovell Fuller",
-  "license": "Apache 2.0",
-  "dependencies": {
-    "binary-csv": "^0.1.7"
-  }
+  "license": "Apache 2.0"
 }
